# A.Ke_project

./: .gitignore
armor_yolov8/: CMakeLists.txt  package.xml
armor_yolov8/src/armor_pnp_learn/: CMakeLists.txt
armor_yolov8/src/armor_pnp_learn/install/: local_setup.sh  setup.sh
armor_yolov8/src/armor_pnp_learn/install/armor_pnp_learn/lib/armor_pnp_learn/: armor_pnp_learn
armor_yolov8/src/armor_pnp_learn/install/armor_pnp_learn/share/armor_pnp_learn/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
armor_yolov8/src/armor_pnp_learn/install/armor_pnp_learn/share/armor_pnp_learn/cmake/: armor_pnp_learnConfig.cmake
armor_yolov8/src/armor_pnp_learn/log/: latest_build
armor_yolov8/src/armor_pnp_learn/src/: armor_pnp_learn.cpp
armor_yolov8/src/yolov8_learn/: CMakeLists.txt  package.xml
armor_yolov8/src/yolov8_learn/install/: local_setup.sh  setup.sh
armor_yolov8/src/yolov8_learn/log/: latest_build
armor_yolov8/src/yolov8_learn/src/: inference.h  yolov8_learn.cpp
cam_PnP/: CMakeLists.txt
cam_PnP/src/pnp_learn/: CMakeLists.txt  package.xml
cam_PnP/src/pnp_learn/install/: local_setup.sh  setup.sh
cam_PnP/src/pnp_learn/log/: latest_build
cam_PnP/src/pnp_learn/src/: pnp_learn.cpp
camera_calibration/src/camera_learn/: CMakeLists.txt
camera_calibration/src/camera_learn/install/: local_setup.sh  setup.sh
camera_calibration/src/camera_learn/install/camera_learn/lib/camera_learn/: camera_learn
camera_calibration/src/camera_learn/install/camera_learn/share/camera_learn/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
camera_calibration/src/camera_learn/install/camera_learn/share/camera_learn/cmake/: camera_learnConfig.cmake
camera_calibration/src/camera_learn/log/: latest_build
camera_calibration/src/camera_learn/src/: camera_learn.cpp
detector_opencv/: .gitignore  CMakeLists.txt  package.xml
detector_opencv/src/detector_learn/: CMakeLists.txt
detector_opencv/src/detector_learn/install/: local_setup.sh  setup.sh
detector_opencv/src/detector_learn/log/: latest_build
detector_opencv/src/detector_learn/src/: detector_learn.cpp
final_project/: CMakeLists.txt  package.xml
final_project/install/: local_setup.sh  setup.sh
final_project/install/final_project/share/final_project/: package.sh
final_project/log/: latest_build
final_project/src/basketball_final/: CMakeLists.txt
final_project/src/basketball_final/install/: local_setup.sh  setup.sh
final_project/src/basketball_final/log/: latest_build
final_project/src/basketball_final/src/: basketball_final.cpp  inference.cpp  inference.h
final_project/src/detect_final/: CMakeLists.txt
final_project/src/detect_final/install/: local_setup.sh  setup.sh
final_project/src/detect_final/log/: latest_build
final_project/src/detect_final/src/: detect_final.cpp  inference.cpp  inference.h  yolo_pose_video.cpp
image_change/: CMakeLists.txt  package.xml
image_change/src/image_learn/: CMakeLists.txt
image_change/src/image_learn/install/: local_setup.sh  setup.sh
image_change/src/image_learn/log/: latest_build
image_change/src/image_learn/src/: image_change.cpp
install/: local_setup.sh  setup.sh
install/armor_yolov8/share/armor_yolov8/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/armor_yolov8/share/armor_yolov8/cmake/: armor_yolov8Config.cmake
install/cam_PnP/share/cam_PnP/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cam_PnP/share/cam_PnP/cmake/: cam_PnPConfig.cmake
log/: latest_build
rm_buff_25/: CMakeLists.txt  package.xml
rm_buff_25/src/rm_rune/: CMakeLists.txt  Readme.md  package.xml
rm_buff_25/src/rm_rune/include/rm_rune/: detect.h  power_rune.hpp  (+2 more)
rm_buff_25/src/rm_rune/src/: autobackend.cpp  blade.cpp  common.cpp  contour_info.cpp  detect.cpp  detect_test.cpp  onnx_model_base.cpp  power_rune.cpp  prediction.cpp  rm_rune_node.cpp
rm_buff_25/src/rm_rune_24/: CMakeLists.txt
rm_buff_25/src/rm_rune_24/src/: blade.cpp  configuration.cpp  contour_info.cpp  image_processer.cpp  power_rune.cpp  prediction.cpp  rm_rune_node.cpp
rm_buff_25/src/rm_rune_noimg/: CMakeLists.txt
rm_buff_25/src/rm_rune_noimg/src/: detect.cpp  prediction.cpp  rm_rune_node.cpp
ros-tf2/install/: local_setup.sh  setup.sh
ros-tf2/log/: latest_build
ros-tf2/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
yolov8-onnx-cpp/: CMakeLists.txt  package.xml
yolov8-onnx-cpp/src/yolo_pose_buff/: CMakeLists.txt
yolov8-onnx-cpp/src/yolo_pose_buff/src/: autobackend.cpp  main.cpp
yolov8-onnx-cpp/src/yolo_pose_buff2/: .gitignore  CMakeLists.txt  output.txt  package.xml
yolov8-onnx-cpp/src/yolo_pose_buff2/src/: detect.cpp  detect.h  main.cpp  output.txt  utils.cpp
yolov8-onnx-cpp/src/yolo_pose_buff_test/: CMakeLists.txt  package.xml
yolov8-onnx-cpp/src/yolo_pose_buff_test/src/: common.cpp  detect.cpp  main.cpp  onnx_model_base.cpp  rm_rune_node.cpp
(+56 files in other folders)
